Fixed move button size on mobile

--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -160,7 +160,7 @@ input:-webkit-autofill, input:-webkit-autofill:focus {
 }
 
 .btn-move {
-	font-size: 10px;
+	font-size: 8px;
 	background-color: $btn-move;
 	border-color: $btn-move-border;
 }
@@ -220,7 +220,7 @@ footer {
 	h4 {
 		font-size: 16px;
 	}
-	.btn-panel {
+	.btn-panel, .btn-move {
 		font-size: 10px;
 	}
 	.img-home {
